k8s/product-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
      - name: product-service
        image: <ECR_IMAGE_URI_FOR_PRODUCT_SERVICE> # ECR에 푸시한 이미지 주소로 변경해야 합니다.
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  selector:
    app: product-service
  ports:
  - protocol: TCP
    port: 3001
    targetPort: 3001
